cluster-mlops/core/kubeflow/manifests-master/common/istio-1-9/kubeflow-istio-resources/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-virtualservice
spec:
  hosts:
  - '*'
  gateways:
  - kubeflow/kubeflow-gateway
  http:
  - match:
    #- port: 443
    - uri:
        prefix: /kubeflow
    route:
    - destination:
        port:
          number: 443
        host: istio-ingressgateway
