cluster-mlops/core/kubeflow/manifests-master/common/istio-1-9/kubeflow-istio-resources/base/nbk-ctlr-culling-authz-policy.yaml
apiVersion: security.istio.io/v1beta1
kind: AuthorizationPolicy
metadata:
  name: notebooks-controller-culling
  namespace: istio-system
spec:
  action: ALLOW
  rules:
  - to:
    - operation:
        methods: ["GET"]
        paths: ["*/api/status"]
